[workspace]
resolver = "3"
members  = ["executor"]

[workspace.package]
version = "0.0.1"
authors = ["pedrocarlo"]
edition = "2024"
license = "MIT"

[workspace.dependencies]
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror  = "2.0.12"
futures    = "0.3.31"

[profile.release]
debug         = "line-tables-only"
codegen-units = 1
panic         = "abort"
lto           = true

[profile.bench-profile]
inherits = "release"
debug    = true

[profile.dist]
inherits = "release"
lto      = "thin"
